@@ -1,3 +1,8 @@
+Mon Nov  8 10:47:41 2004  Manish Singh  <yosh@gimp.org>
+
+	* gobject/gsourceclosure.c: removed wrap_g_io_channel_ref() hack,
+	since g_io_channel_ref() has a compatible API now.
+
 2004-11-02  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.5.5 ===
